--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "develop -d build"
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -46,6 +46,7 @@
   },
   "devDependencies": {
     "develop": "^1.0.0",
+    "gh-pages": "^5.0.0",
     "node-sass": "^7.0.3"
   }
 }
